# text_classification

./: LICENSE  README.md  data_concat_document_segments.py  data_split_documents.py  data_txt_to_jsonl.py  eval_dataset.py  export.py  fix_dataset.py  jepa_modern_arch.md  jepa_pretrain.py  jepa_pretraining.md  pip_freeze.txt  pyproject.toml  requirements.txt  train.py
configs/: barticzech-1.0.yaml  base.yaml  hplt_gpt_bert_base.yaml  jepa_base.yaml  jepa_finetune_base.yaml  jepa_finetune_light_2.yaml  jepa_light.yaml  jepa_light_2.yaml  jepa_light_2_geglu.yaml  jepa_light_2_local.yaml  jepa_light_2_staged_8l.yaml  jepa_smoketest.yaml  llm_base.yaml  models.txt  run_all.sh  xlm-roberta-large.yaml  xlm_roberta_large.yaml
docs/: configuration.md  jepa_pretraining.md  llm_classification.md
tests/: test_dataset.py  test_metrics.py  test_model.py
tests/jepa/: test_classifier.py  test_corruption.py  test_data.py  test_finetune_data.py  test_lightning.py  test_loss.py  test_model.py
text_classification/: __init__.py
text_classification/data/: __init__.py  dataset.py
text_classification/jepa/: __init__.py  classifier.py  corruption.py  curriculum.py  data.py  finetune.py  finetune_data.py  finetune_module.py  lightning_module.py  loss.py  model.py  train.py
text_classification/metrics/: __init__.py  multilabel.py
text_classification/models/: __init__.py  classifier.py
text_classification/training/: lightning_module.py
text_classification/utils/: config.py  (+2 more)
train_llm/: config.py  config.yaml  data.py  torch_utils.py  train_llm.py  trn.short.500.jsonl  utils.py
(+1 files in other folders)
