[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_classification"
version = "0.1.0"
description = "Multi-label text classification for Czech OCR documents"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10.0",
    "pytorch-lightning>=2.3.0",
    "transformers>=4.40.0",
    "omegaconf>=2.3.0",
    "clearml>=1.14.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
llm = [
    "peft>=0.11.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
]
unsloth = [
    "unsloth>=2024.8",
]

[project.scripts]
tc-train = "text_classification.train:main"
tc-export = "text_classification.export:main"
tc-llm-train = "text_classification.llm.train:main"
tc-llm-eval = "text_classification.llm.eval:main"
tc-jepa-pretrain = "text_classification.jepa.train:main"
tc-jepa-finetune = "text_classification.jepa.finetune:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["text_classification*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
